data/derived/sp14/progs/unify/prog4309.ml.out
Characters 28-39:
  let fixpoint (f,b) = wwhile(f (f b = b), b);;
                              ^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
